@@ -1,0 +1,4 @@
+Significance: minor
+Type: add
+
+Add a preview of uploaded logo and icon on terminal card reader receipt settings page.
